--- a/frontend/trial.html
+++ b/frontend/trial.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,30 +10,123 @@
             --brand-primary: #0b4f6c;
             --accent: #f59e0b;
         }
-        * { box-sizing: border-box; }
+
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, 'Microsoft JhengHei', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             background: #fff7ed;
             color: #1f2933;
         }
-        header { padding: 48px 24px 30px; text-align:center; background: linear-gradient(135deg,#fbbf24,#f59e0b); color:#fff; }
-        header h1 { margin:0 0 10px; font-size:2.4rem; }
-        header p { margin:0; opacity:0.95; }
-        nav { display:flex; justify-content:center; gap:16px; flex-wrap:wrap; margin-top:18px; }
-        nav a { padding:10px 18px; border-radius:999px; border:2px solid rgba(255,255,255,0.7); color:#fff; font-weight:600; text-decoration:none; }
-        main { max-width:900px; margin:0 auto; padding:0 24px 60px; margin-top:-24px; }
-        section { background:#fff; border-radius:24px; padding:30px; box-shadow:0 28px 60px rgba(217,119,6,0.18); border:1px solid rgba(251,191,36,0.4); }
-        .product-grid { display:grid; gap:24px; }
-        @media(min-width:768px){ .product-grid { grid-template-columns:repeat(2,minmax(0,1fr)); } }
-        .product-card { border:1px solid rgba(251,191,36,0.5); border-radius:18px; padding:22px; background:linear-gradient(135deg,rgba(251,191,36,0.15),rgba(255,255,255,0.92)); display:flex; flex-direction:column; gap:12px; }
-        .product-card h2 { margin:0; color:#92400e; }
-        .product-card p { margin:0; color:#7c2d12; line-height:1.6; }
-        .product-meta { color:#7c2d12; display:flex; flex-direction:column; gap:6px; }
-        .cta { margin-top:auto; font-weight:600; color:#b45309; }
-        .empty { text-align:center; color:#b45309; padding:24px; border:1px dashed rgba(251,191,36,0.6); border-radius:16px; background:rgba(254,243,199,0.6); }
+
+        header {
+            padding: 48px 24px 30px;
+            text-align: center;
+            background: linear-gradient(135deg, #fbbf24, #f59e0b);
+            color: #fff;
+        }
+
+        header h1 {
+            margin: 0 0 10px;
+            font-size: 2.4rem;
+        }
+
+        header p {
+            margin: 0;
+            opacity: 0.95;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 16px;
+            flex-wrap: wrap;
+            margin-top: 18px;
+        }
+
+        nav a {
+            padding: 10px 18px;
+            border-radius: 999px;
+            border: 2px solid rgba(255, 255, 255, 0.7);
+            color: #fff;
+            font-weight: 600;
+            text-decoration: none;
+        }
+
+        main {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 0 24px 60px;
+            margin-top: -24px;
+        }
+
+        section {
+            background: #fff;
+            border-radius: 24px;
+            padding: 30px;
+            box-shadow: 0 28px 60px rgba(217, 119, 6, 0.18);
+            border: 1px solid rgba(251, 191, 36, 0.4);
+        }
+
+        .product-grid {
+            display: grid;
+            gap: 24px;
+        }
+
+        @media(min-width:768px) {
+            .product-grid {
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+            }
+        }
+
+        .product-card {
+            border: 1px solid rgba(251, 191, 36, 0.5);
+            border-radius: 18px;
+            padding: 22px;
+            background: linear-gradient(135deg, rgba(251, 191, 36, 0.15), rgba(255, 255, 255, 0.92));
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .product-card h2 {
+            margin: 0;
+            color: #92400e;
+        }
+
+        .product-card p {
+            margin: 0;
+            color: #7c2d12;
+            line-height: 1.6;
+        }
+
+        .product-meta {
+            color: #7c2d12;
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+
+        .cta {
+            margin-top: auto;
+            font-weight: 600;
+            color: #b45309;
+        }
+
+        .empty {
+            text-align: center;
+            color: #b45309;
+            padding: 24px;
+            border: 1px dashed rgba(251, 191, 36, 0.6);
+            border-radius: 16px;
+            background: rgba(254, 243, 199, 0.6);
+        }
     </style>
 </head>
+
 <body>
     <header>
         <h1>試堂體驗方案</h1>
@@ -53,7 +147,10 @@
             const DEFAULT_API_PATH = '/api';
             const RENDER_API_ORIGIN = 'https://booking-ub69.onrender.com';
             const fallbackOrigin = RENDER_API_ORIGIN;
-            const baseOrigin = (window.location.origin && window.location.origin !== 'null') ? window.location.origin : fallbackOrigin;
+            const baseOrigin = (window.location.origin && window.location.origin !== 'null')
+                ? window.location.origin
+                : fallbackOrigin;
+
             const ensureApiPath = (value) => {
                 if (!value) return null;
                 try {
@@ -69,6 +166,7 @@
                     return null;
                 }
             };
+
             const normalizeBaseUrl = (value) => {
                 if (!value) return null;
                 try {
@@ -80,34 +178,36 @@
                     return null;
                 }
             };
+
             const params = new URLSearchParams(window.location.search);
             const queryOverride = params.get('apiBaseUrl') || params.get('api_base_url');
             if (queryOverride) {
                 const resolved = ensureApiPath(normalizeBaseUrl(queryOverride));
                 if (resolved) {
-                    try { localStorage.setItem(storageKey, resolved); } catch (error) {}
+                    try { localStorage.setItem(storageKey, resolved); } catch (error) { }
                     return resolved;
                 }
             }
+
             try {
                 const stored = ensureApiPath(normalizeBaseUrl(localStorage.getItem(storageKey)));
                 if (stored) return stored;
-            } catch (error) {}
+            } catch (error) { }
+
             const inlineConfig = ensureApiPath(normalizeBaseUrl(window.__BOOKING_CONFIG__?.apiBaseUrl));
             if (inlineConfig) return inlineConfig;
+
             const metaTag = document.querySelector('meta[name="api-base-url"]');
             const metaUrl = ensureApiPath(normalizeBaseUrl(metaTag?.content));
             if (metaUrl) return metaUrl;
-            const normalizedRenderOrigin = normalizeBaseUrl(RENDER_API_ORIGIN) || fallbackOrigin;
+
+            // Prioritize current origin if valid (e.g. served from the same backend)
             const normalizedCurrentOrigin = normalizeBaseUrl(baseOrigin);
-            if (normalizedCurrentOrigin && normalizedCurrentOrigin === normalizedRenderOrigin) {
+            if (normalizedCurrentOrigin && !normalizedCurrentOrigin.startsWith('file:') && normalizedCurrentOrigin !== 'null') {
                 return ensureApiPath(normalizedCurrentOrigin);
             }
-            const isLocalhost = normalizedCurrentOrigin ? /^https?:\/\/(localhost|127\.0\.0\.1|0\.0\.0\.0)(:\\d+)?$/i.test(normalizedCurrentOrigin) : false;
-            if (isLocalhost && normalizedCurrentOrigin) {
-                return ensureApiPath(normalizedCurrentOrigin);
-            }
-            return ensureApiPath(normalizedRenderOrigin);
+
+            return ensureApiPath(fallbackOrigin);
         }
         const API_BASE_URL = resolveApiBaseUrl('booking.apiBaseUrl');
         async function loadTrials() {
@@ -144,4 +244,5 @@
         loadTrials();
     </script>
 </body>
+
 </html>
