--- a/frontend/class-schedule.html
+++ b/frontend/class-schedule.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,47 +13,99 @@
             --surface-strong: #ffffff;
             --accent: #f2c94c;
         }
-        * { box-sizing: border-box; }
+
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, 'Microsoft JhengHei', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             background: #edf1f7;
             color: #1f2933;
         }
+
         header {
             padding: 40px 24px 30px;
-            background: linear-gradient(135deg, rgba(20,93,160,0.85), rgba(11,79,108,0.95));
+            background: linear-gradient(135deg, rgba(20, 93, 160, 0.85), rgba(11, 79, 108, 0.95));
             color: #fff;
         }
-        header h1 { margin: 0 0 12px; font-size: 2.4rem; }
-        header p { margin: 0; opacity: 0.92; }
-        main { max-width: 1100px; margin: 0 auto; padding: 0 24px 60px; margin-top: -30px; }
-        .layout { display: grid; gap: 24px; }
-        @media (min-width: 960px) {
-            .layout { grid-template-columns: 7fr 4fr; }
+
+        header h1 {
+            margin: 0 0 12px;
+            font-size: 2.4rem;
         }
+
+        header p {
+            margin: 0;
+            opacity: 0.92;
+        }
+
+        main {
+            max-width: 1100px;
+            margin: 0 auto;
+            padding: 0 24px 60px;
+            margin-top: -30px;
+        }
+
+        .layout {
+            display: grid;
+            gap: 24px;
+        }
+
+        @media (min-width: 960px) {
+            .layout {
+                grid-template-columns: 7fr 4fr;
+            }
+        }
+
         .card {
             background: var(--surface-strong);
             border-radius: 22px;
             padding: 28px;
-            box-shadow: 0 28px 50px rgba(15,55,98,0.12);
-            border: 1px solid rgba(20,93,160,0.1);
+            box-shadow: 0 28px 50px rgba(15, 55, 98, 0.12);
+            border: 1px solid rgba(20, 93, 160, 0.1);
         }
-        nav { display: flex; gap: 16px; flex-wrap: wrap; margin-bottom: 24px; }
-        nav a { color: #fff; text-decoration: none; font-weight: 600; }
-        .week-nav { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+
+        nav {
+            display: flex;
+            gap: 16px;
+            flex-wrap: wrap;
+            margin-bottom: 24px;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        .week-nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
         .week-nav button {
             border: none;
-            background: rgba(20,93,160,0.12);
+            background: rgba(20, 93, 160, 0.12);
             color: var(--brand-secondary);
             padding: 8px 14px;
             border-radius: 999px;
             cursor: pointer;
             font-weight: 600;
         }
-        .day-buttons { display: grid; grid-template-columns: repeat(auto-fit,minmax(120px,1fr)); gap: 12px; margin-bottom: 24px; }
+
+        .day-buttons {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 12px;
+            margin-bottom: 24px;
+        }
+
         .day-button {
-            border: 2px solid rgba(20,93,160,0.18);
+            border: 2px solid rgba(20, 93, 160, 0.18);
             border-radius: 14px;
             padding: 14px 12px;
             background: #fff;
@@ -60,10 +113,12 @@
             text-align: center;
             transition: border 0.2s, transform 0.2s;
         }
+
         .day-button.active {
             border-color: var(--brand-secondary);
-            background: linear-gradient(135deg, rgba(20,93,160,0.12), rgba(20,93,160,0.18));
+            background: linear-gradient(135deg, rgba(20, 93, 160, 0.12), rgba(20, 93, 160, 0.18));
         }
+
         .class-item {
             border: 1px solid #dbe2ed;
             border-radius: 18px;
@@ -73,20 +128,55 @@
             flex-direction: column;
             gap: 12px;
         }
-        .class-item + .class-item { margin-top: 16px; }
-        .class-header { display: flex; justify-content: space-between; gap: 12px; flex-wrap: wrap; align-items: center; }
-        .class-name { font-size: 1.2rem; color: var(--brand-primary); font-weight: 700; }
-        .tag-list { display: flex; flex-wrap: wrap; gap: 8px; }
+
+        .class-item+.class-item {
+            margin-top: 16px;
+        }
+
+        .class-header {
+            display: flex;
+            justify-content: space-between;
+            gap: 12px;
+            flex-wrap: wrap;
+            align-items: center;
+        }
+
+        .class-name {
+            font-size: 1.2rem;
+            color: var(--brand-primary);
+            font-weight: 700;
+        }
+
+        .tag-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+        }
+
         .tag {
             background: var(--surface);
             border-radius: 999px;
             padding: 4px 10px;
             font-size: 0.85rem;
             color: #475569;
-            border: 1px solid rgba(20,93,160,0.18);
+            border: 1px solid rgba(20, 93, 160, 0.18);
         }
-        .class-meta { color: #475569; font-size: 0.95rem; display: grid; gap: 6px; }
-        .class-actions { display: flex; justify-content: space-between; align-items: center; gap: 12px; flex-wrap: wrap; }
+
+        .class-meta {
+            color: #475569;
+            font-size: 0.95rem;
+            display: grid;
+            gap: 6px;
+        }
+
+        .class-actions {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 12px;
+            flex-wrap: wrap;
+        }
+
         .class-actions button {
             border: none;
             background: linear-gradient(135deg, var(--brand-secondary), var(--brand-primary));
@@ -96,33 +186,172 @@
             cursor: pointer;
             font-weight: 600;
         }
+
         .class-actions button:disabled {
             background: #cbd5e1;
             cursor: not-allowed;
         }
-        .schedule-empty { text-align: center; color: #64748b; padding: 24px; border: 1px dashed #cbd5e1; border-radius: 16px; }
-        .booking-card h2 { margin-top: 0; }
-        .booking-card form { display: grid; gap: 18px; }
-        label { font-weight: 600; color: #334155; display: block; margin-bottom: 6px; }
-        input { width: 100%; padding: 12px 14px; border: 2px solid #d6dde6; border-radius: 12px; font-size: 1rem; }
-        input:focus { outline: none; border-color: var(--brand-secondary); box-shadow: 0 0 0 3px rgba(20,93,160,0.12); }
-        .status-message { display: none; border-radius: 12px; padding: 12px 14px; font-weight: 600; }
-        .status-message.success { background: #d4edda; color: #155724; border: 1px solid #c3e6cb; }
-        .status-message.error { background: #f8d7da; color: #721c24; border: 1px solid #f5c6cb; }
-        .booking-summary { background: var(--surface); border-radius: 16px; padding: 16px; border: 1px solid #dbe2ed; }
-        .payment-info { background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 14px; padding: 12px 14px; color: #0f172a; line-height: 1.6; }
-        .payment-info-title { font-weight: 700; color: var(--brand-secondary); margin-bottom: 6px; }
-        .payment-info div { margin: 4px 0; }
-        .payment-reminder-modal { position: fixed; inset: 0; background: rgba(15, 23, 42, 0.45); display: flex; align-items: center; justify-content: center; padding: 16px; z-index: 1000; opacity: 0; pointer-events: none; transition: opacity 0.2s ease; }
-        .payment-reminder-modal.active { opacity: 1; pointer-events: auto; }
-        .payment-reminder-content { background: #fff; width: min(480px, 100%); border-radius: 18px; padding: 24px 24px 20px; box-shadow: 0 24px 50px rgba(15, 23, 42, 0.2); position: relative; }
-        .payment-reminder-close { position: absolute; top: 12px; right: 12px; border: none; background: #e2e8f0; color: #0f172a; border-radius: 50%; width: 32px; height: 32px; font-weight: 700; cursor: pointer; }
-        .payment-reminder-content h3 { margin-top: 0; color: var(--brand-secondary); margin-bottom: 10px; }
-        .payment-reminder-content p { color: #1f2937; line-height: 1.6; margin: 0 0 16px; }
-        .whatsapp-button { display: inline-flex; align-items: center; gap: 10px; padding: 12px 16px; background: #25d366; color: #fff; border: none; border-radius: 12px; font-weight: 700; cursor: pointer; text-decoration: none; box-shadow: 0 12px 24px rgba(37, 211, 102, 0.25); }
-        .whatsapp-button[aria-disabled="true"] { background: #cbd5e1; cursor: not-allowed; box-shadow: none; }
+
+        .schedule-empty {
+            text-align: center;
+            color: #64748b;
+            padding: 24px;
+            border: 1px dashed #cbd5e1;
+            border-radius: 16px;
+        }
+
+        .booking-card h2 {
+            margin-top: 0;
+        }
+
+        .booking-card form {
+            display: grid;
+            gap: 18px;
+        }
+
+        label {
+            font-weight: 600;
+            color: #334155;
+            display: block;
+            margin-bottom: 6px;
+        }
+
+        input {
+            width: 100%;
+            padding: 12px 14px;
+            border: 2px solid #d6dde6;
+            border-radius: 12px;
+            font-size: 1rem;
+        }
+
+        input:focus {
+            outline: none;
+            border-color: var(--brand-secondary);
+            box-shadow: 0 0 0 3px rgba(20, 93, 160, 0.12);
+        }
+
+        .status-message {
+            display: none;
+            border-radius: 12px;
+            padding: 12px 14px;
+            font-weight: 600;
+        }
+
+        .status-message.success {
+            background: #d4edda;
+            color: #155724;
+            border: 1px solid #c3e6cb;
+        }
+
+        .status-message.error {
+            background: #f8d7da;
+            color: #721c24;
+            border: 1px solid #f5c6cb;
+        }
+
+        .booking-summary {
+            background: var(--surface);
+            border-radius: 16px;
+            padding: 16px;
+            border: 1px solid #dbe2ed;
+        }
+
+        .payment-info {
+            background: #f8fafc;
+            border: 1px solid #e2e8f0;
+            border-radius: 14px;
+            padding: 12px 14px;
+            color: #0f172a;
+            line-height: 1.6;
+        }
+
+        .payment-info-title {
+            font-weight: 700;
+            color: var(--brand-secondary);
+            margin-bottom: 6px;
+        }
+
+        .payment-info div {
+            margin: 4px 0;
+        }
+
+        .payment-reminder-modal {
+            position: fixed;
+            inset: 0;
+            background: rgba(15, 23, 42, 0.45);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 16px;
+            z-index: 1000;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.2s ease;
+        }
+
+        .payment-reminder-modal.active {
+            opacity: 1;
+            pointer-events: auto;
+        }
+
+        .payment-reminder-content {
+            background: #fff;
+            width: min(480px, 100%);
+            border-radius: 18px;
+            padding: 24px 24px 20px;
+            box-shadow: 0 24px 50px rgba(15, 23, 42, 0.2);
+            position: relative;
+        }
+
+        .payment-reminder-close {
+            position: absolute;
+            top: 12px;
+            right: 12px;
+            border: none;
+            background: #e2e8f0;
+            color: #0f172a;
+            border-radius: 50%;
+            width: 32px;
+            height: 32px;
+            font-weight: 700;
+            cursor: pointer;
+        }
+
+        .payment-reminder-content h3 {
+            margin-top: 0;
+            color: var(--brand-secondary);
+            margin-bottom: 10px;
+        }
+
+        .payment-reminder-content p {
+            color: #1f2937;
+            line-height: 1.6;
+            margin: 0 0 16px;
+        }
+
+        .whatsapp-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            padding: 12px 16px;
+            background: #25d366;
+            color: #fff;
+            border: none;
+            border-radius: 12px;
+            font-weight: 700;
+            cursor: pointer;
+            text-decoration: none;
+            box-shadow: 0 12px 24px rgba(37, 211, 102, 0.25);
+        }
+
+        .whatsapp-button[aria-disabled="true"] {
+            background: #cbd5e1;
+            cursor: not-allowed;
+            box-shadow: none;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <nav>
@@ -177,10 +406,12 @@
     </main>
     <div class="payment-reminder-modal" id="payment-reminder-modal" aria-hidden="true">
         <div class="payment-reminder-content">
-            <button type="button" class="payment-reminder-close" id="payment-reminder-close" aria-label="關閉提醒">×</button>
+            <button type="button" class="payment-reminder-close" id="payment-reminder-close"
+                aria-label="關閉提醒">×</button>
             <h3>預約已提交</h3>
             <p>預約已提交，請在 30 分鐘內完成付款，並將付款截圖 send 到 WhatsApp。</p>
-            <a id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開 WhatsApp</a>
+            <a id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開
+                WhatsApp</a>
         </div>
     </div>
     <script>
@@ -225,14 +456,14 @@
             if (queryOverride) {
                 const resolved = ensureApiPath(normalizeBaseUrl(queryOverride));
                 if (resolved) {
-                    try { localStorage.setItem(storageKey, resolved); } catch (error) {}
+                    try { localStorage.setItem(storageKey, resolved); } catch (error) { }
                     return resolved;
                 }
             }
             try {
                 const stored = ensureApiPath(normalizeBaseUrl(localStorage.getItem(storageKey)));
                 if (stored) return stored;
-            } catch (error) {}
+            } catch (error) { }
 
             const inlineConfig = ensureApiPath(normalizeBaseUrl(window.__BOOKING_CONFIG__?.apiBaseUrl));
             if (inlineConfig) return inlineConfig;
@@ -241,18 +472,13 @@
             const metaUrl = ensureApiPath(normalizeBaseUrl(metaTag?.content));
             if (metaUrl) return metaUrl;
 
-            const normalizedRenderOrigin = normalizeBaseUrl(RENDER_API_ORIGIN) || fallbackOrigin;
+            // Prioritize current origin if valid (e.g. served from the same backend)
             const normalizedCurrentOrigin = normalizeBaseUrl(baseOrigin);
-            if (normalizedCurrentOrigin && normalizedCurrentOrigin === normalizedRenderOrigin) {
+            if (normalizedCurrentOrigin && !normalizedCurrentOrigin.startsWith('file:') && normalizedCurrentOrigin !== 'null') {
                 return ensureApiPath(normalizedCurrentOrigin);
             }
-            const isLocalhost = normalizedCurrentOrigin
-                ? /^https?:\/\/(localhost|127\.0\.0\.1|0\.0\.0\.0)(:\\d+)?$/i.test(normalizedCurrentOrigin)
-                : false;
-            if (isLocalhost && normalizedCurrentOrigin) {
-                return ensureApiPath(normalizedCurrentOrigin);
-            }
-            return ensureApiPath(normalizedRenderOrigin);
+
+            return ensureApiPath(fallbackOrigin);
         }
 
         const API_BASE_URL = resolveApiBaseUrl('booking.apiBaseUrl');
@@ -293,7 +519,7 @@
             const day = d.getDay();
             const diff = d.getDate() - day; // start from Sunday
             d.setDate(diff);
-            d.setHours(0,0,0,0);
+            d.setHours(0, 0, 0, 0);
             return d;
         }
 
@@ -328,7 +554,7 @@
                 button.className = 'day-button';
                 const iso = formatDate(date);
                 button.dataset.date = iso;
-                button.innerHTML = `<div style="font-weight:700;">${['日','一','二','三','四','五','六'][date.getDay()]}</div><div>${formatDisplayDate(date)}</div>`;
+                button.innerHTML = `<div style="font-weight:700;">${['日', '一', '二', '三', '四', '五', '六'][date.getDay()]}</div><div>${formatDisplayDate(date)}</div>`;
                 if (state.selectedDate === iso) {
                     button.classList.add('active');
                 }
@@ -459,8 +685,8 @@
                 : `總價：HK$ ${total.toFixed(2)}（HK$ ${(Number(cls.price || 0)).toFixed(2)} /人）`;
             const remaining = cls.seatsRemaining != null ? cls.seatsRemaining : cls.capacity;
             elements.bookingSummary.innerHTML = `
-                <div><strong>${start.getFullYear()}-${(start.getMonth()+1).toString().padStart(2,'0')}-${start.getDate().toString().padStart(2,'0')}</strong></div>
-                <div>時間：${start.toTimeString().slice(0,5)} - ${end.toTimeString().slice(0,5)}</div>
+                <div><strong>${start.getFullYear()}-${(start.getMonth() + 1).toString().padStart(2, '0')}-${start.getDate().toString().padStart(2, '0')}</strong></div>
+                <div>時間：${start.toTimeString().slice(0, 5)} - ${end.toTimeString().slice(0, 5)}</div>
                 <div>講師：${cls.instructor || '待定'}</div>
                 <div>地點：${cls.location || 'Studio'}</div>
                 <div>剩餘名額：${remaining}</div>
@@ -623,4 +849,5 @@
         init();
     </script>
 </body>
+
 </html>
