--- a/frontend/rental.html
+++ b/frontend/rental.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,19 +14,29 @@
             --accent: #f2c94c;
             --danger: #f2545b;
         }
-        * { box-sizing: border-box; }
+
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, 'Microsoft JhengHei', 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
             background: #EDEDE9;
             color: #1f2933;
         }
-        a { color: inherit; text-decoration: none; }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
         header {
             background: linear-gradient(135deg, var(--brand-secondary) 0%, var(--brand-primary) 100%);
             color: #fff;
             padding: 40px 24px 60px;
         }
+
         .nav-bar {
             display: flex;
             justify-content: space-between;
@@ -33,33 +44,42 @@
             gap: 16px;
             margin-bottom: 40px;
         }
+
         .nav-bar a {
             color: #fff;
             font-weight: 600;
             letter-spacing: 0.04em;
         }
+
         .hero {
             max-width: 960px;
             margin: 0 auto;
             text-align: center;
         }
+
         .hero h1 {
             font-size: 2.4rem;
             margin-bottom: 12px;
         }
-        .hero p { opacity: 0.9; }
+
+        .hero p {
+            opacity: 0.9;
+        }
+
         main {
             max-width: 1100px;
             margin: -40px auto 80px;
             padding: 0 24px;
         }
+
         .card {
-            background: rgba(255,255,255,0.98);
+            background: rgba(255, 255, 255, 0.98);
             border-radius: 24px;
-            box-shadow: 0 28px 50px rgba(15,30,84,0.1);
+            box-shadow: 0 28px 50px rgba(15, 30, 84, 0.1);
             padding: 32px;
             margin-bottom: 32px;
         }
+
         .card h2 {
             font-size: 1.6rem;
             color: var(--brand-secondary);
@@ -68,22 +88,27 @@
             gap: 12px;
             margin-bottom: 20px;
         }
+
         .grid {
             display: grid;
             gap: 24px;
         }
+
         @media (min-width: 960px) {
             .grid.two {
                 grid-template-columns: 7fr 5fr;
             }
         }
+
         label {
             font-weight: 600;
             color: #334155;
             display: block;
             margin-bottom: 8px;
         }
-        input, textarea {
+
+        input,
+        textarea {
             width: 100%;
             border: 2px solid #d6dde6;
             border-radius: 12px;
@@ -91,16 +116,20 @@
             font-size: 1rem;
             transition: border-color 0.2s, box-shadow 0.2s;
         }
-        input:focus, textarea:focus {
+
+        input:focus,
+        textarea:focus {
             outline: none;
             border-color: var(--brand-secondary);
-            box-shadow: 0 0 0 4px rgba(20,93,160,0.16);
+            box-shadow: 0 0 0 4px rgba(20, 93, 160, 0.16);
         }
+
         .slot-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
             gap: 10px;
         }
+
         .slot-button {
             border: 2px solid #e2e7ef;
             border-radius: 12px;
@@ -111,28 +140,33 @@
             cursor: pointer;
             transition: all 0.2s;
         }
+
         .slot-button:hover:not(.disabled) {
             border-color: var(--brand-secondary);
             transform: translateY(-2px);
-            box-shadow: 0 10px 16px rgba(20,93,160,0.08);
+            box-shadow: 0 10px 16px rgba(20, 93, 160, 0.08);
         }
+
         .slot-button.selected {
             background: linear-gradient(135deg, var(--brand-secondary) 0%, var(--brand-primary) 100%);
             color: #fff;
             border-color: var(--brand-primary);
         }
+
         .slot-button.disabled {
             background: #f0f0f0;
             color: #94a3b8;
             cursor: not-allowed;
             text-decoration: line-through;
         }
+
         .slot-button.pending {
             background: #fff8e1;
             border-color: #f2c94c;
             color: #8f6a02;
             cursor: not-allowed;
         }
+
         .legend {
             display: flex;
             gap: 16px;
@@ -141,17 +175,39 @@
             font-size: 0.92rem;
             color: #475569;
         }
-        .legend span { display: flex; align-items: center; gap: 8px; }
+
+        .legend span {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
         .legend-box {
             width: 16px;
             height: 16px;
             border-radius: 4px;
             border: 1px solid #d6dde6;
         }
-        .legend-box.available { background: #fff; }
-        .legend-box.pending { background: #fff8e1; border-color: #f2c94c; }
-        .legend-box.unavailable { background: #f0f0f0; }
-        .summary-list { display: flex; flex-direction: column; gap: 12px; }
+
+        .legend-box.available {
+            background: #fff;
+        }
+
+        .legend-box.pending {
+            background: #fff8e1;
+            border-color: #f2c94c;
+        }
+
+        .legend-box.unavailable {
+            background: #f0f0f0;
+        }
+
+        .summary-list {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
         .summary-item {
             border: 1px solid #dbe2ed;
             border-radius: 14px;
@@ -162,12 +218,17 @@
             align-items: center;
             gap: 12px;
         }
+
         .summary-date {
             font-weight: 700;
             color: var(--brand-secondary);
             margin-top: 4px;
         }
-        .summary-item strong { color: var(--brand-primary); }
+
+        .summary-item strong {
+            color: var(--brand-primary);
+        }
+
         .summary-item button {
             border: none;
             background: var(--danger);
@@ -176,6 +237,7 @@
             border-radius: 999px;
             cursor: pointer;
         }
+
         .summary-totals {
             margin-top: 18px;
             border-top: 1px solid #e2e8f0;
@@ -185,8 +247,18 @@
             gap: 6px;
             color: #1e293b;
         }
-        .totals-row { display: flex; justify-content: space-between; }
-        .totals-row.total { font-weight: 700; font-size: 1.1rem; color: var(--brand-primary); }
+
+        .totals-row {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .totals-row.total {
+            font-weight: 700;
+            font-size: 1.1rem;
+            color: var(--brand-primary);
+        }
+
         .btn-primary {
             width: 100%;
             background: linear-gradient(135deg, var(--brand-secondary) 0%, var(--brand-primary) 100%);
@@ -199,15 +271,18 @@
             cursor: pointer;
             transition: transform 0.2s, box-shadow 0.2s;
         }
+
         .btn-primary:disabled {
             background: #cbd5e1;
             cursor: not-allowed;
             box-shadow: none;
         }
+
         .btn-primary:not(:disabled):hover {
             transform: translateY(-2px);
-            box-shadow: 0 18px 30px rgba(15,55,98,0.2);
+            box-shadow: 0 18px 30px rgba(15, 55, 98, 0.2);
         }
+
         .status-message {
             padding: 14px 18px;
             border-radius: 12px;
@@ -215,28 +290,37 @@
             margin-bottom: 18px;
             display: none;
         }
+
         .status-message.success {
             background: #d4edda;
             color: #155724;
             border: 1px solid #c3e6cb;
         }
+
         .status-message.error {
             background: #f8d7da;
             color: #721c24;
             border: 1px solid #f5c6cb;
         }
+
         .instruction-list {
             background: #fff7e6;
             border-radius: 18px;
             padding: 20px 24px;
             border: 1px solid #f2c94c;
         }
+
         .instruction-list h3 {
             margin-top: 0;
             margin-bottom: 12px;
             color: #8f6a02;
         }
-        .instruction-list ol { margin: 0 0 0 20px; line-height: 1.6; }
+
+        .instruction-list ol {
+            margin: 0 0 0 20px;
+            line-height: 1.6;
+        }
+
         .payment-panel {
             background: var(--surface);
             border-radius: 16px;
@@ -320,6 +404,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="nav-bar">
@@ -358,7 +443,8 @@
                     <div class="totals-row"><span>已選時段</span><span id="total-blocks">0</span></div>
                     <div class="totals-row"><span>總時數</span><span id="total-hours">0 小時</span></div>
                     <div class="totals-row"><span>總人數</span><span id="total-people">0</span></div>
-                    <div class="totals-row total"><span>預估金額</span><span>HK$ <span id="total-amount">0</span></span></div>
+                    <div class="totals-row total"><span>預估金額</span><span>HK$ <span id="total-amount">0</span></span>
+                    </div>
                 </div>
             </div>
         </div>
@@ -394,10 +480,12 @@
     </main>
     <div class="payment-reminder-modal" id="payment-reminder-modal" aria-hidden="true">
         <div class="payment-reminder-content">
-            <button type="button" class="payment-reminder-close" id="payment-reminder-close" aria-label="關閉提醒">×</button>
+            <button type="button" class="payment-reminder-close" id="payment-reminder-close"
+                aria-label="關閉提醒">×</button>
             <h3>預約已提交</h3>
             <p>預約已提交，請在 30 分鐘內完成付款，並將付款截圖 send 到 WhatsApp。</p>
-            <a id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開 WhatsApp</a>
+            <a id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開
+                WhatsApp</a>
         </div>
     </div>
     <script>
@@ -467,22 +555,13 @@
             const metaUrl = ensureApiPath(normalizeBaseUrl(metaTag?.content));
             if (metaUrl) return metaUrl;
 
-            const normalizedRenderOrigin = normalizeBaseUrl(RENDER_API_ORIGIN) || fallbackOrigin;
+            // Prioritize current origin if valid (e.g. served from the same backend)
             const normalizedCurrentOrigin = normalizeBaseUrl(baseOrigin);
-
-            if (normalizedCurrentOrigin && normalizedCurrentOrigin === normalizedRenderOrigin) {
+            if (normalizedCurrentOrigin && !normalizedCurrentOrigin.startsWith('file:') && normalizedCurrentOrigin !== 'null') {
                 return ensureApiPath(normalizedCurrentOrigin);
             }
 
-            const isLocalhost = normalizedCurrentOrigin
-                ? /^https?:\/\/(localhost|127\.0\.0\.1|0\.0\.0\.0)(:\\d+)?$/i.test(normalizedCurrentOrigin)
-                : false;
-
-            if (isLocalhost && normalizedCurrentOrigin) {
-                return ensureApiPath(normalizedCurrentOrigin);
-            }
-
-            return ensureApiPath(normalizedRenderOrigin);
+            return ensureApiPath(fallbackOrigin);
         }
 
         const API_BASE_URL = resolveApiBaseUrl('booking.apiBaseUrl');
@@ -635,7 +714,7 @@
             if (!schedule || schedule.days.length === 0) return 'normal';
             const parsed = new Date(`${date}T00:00:00`);
             if (Number.isNaN(parsed.getTime())) return 'normal';
-            const dayToken = ['sun','mon','tue','wed','thu','fri','sat'][parsed.getDay()];
+            const dayToken = ['sun', 'mon', 'tue', 'wed', 'thu', 'fri', 'sat'][parsed.getDay()];
             if (!schedule.days.includes(dayToken)) return 'normal';
             const startMinutes = timeToMinutes(startTime);
             const endMinutes = timeToMinutes(endTime);
@@ -1055,4 +1134,5 @@
         });
     </script>
 </body>
+
 </html>
