--- a/frontend/rental.html
+++ b/frontend/rental.html
@@ -511,91 +511,24 @@
     </main>
     <div class="payment-reminder-modal" id="payment-reminder-modal" aria-hidden="true">
         <div class="payment-reminder-content">
-            <button type="button" class="payment-reminder-close" id="payment-reminder-close"
-                aria-label="關閉提醒">×</button>
-            <h3>預約已提交</h3>
-            <p>預約已提交，請在 30 分鐘內完成付款，並將付款截圖 send 到 WhatsApp。</p>
-            <a id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開
+            <button type="button" class="payment-reminder-close" id="payment-reminder-close" <a
+                id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開
                 WhatsApp</a>
         </div>
     </div>
     <script>
-        function resolveApiBaseUrl(storageKey) {
-            const DEFAULT_API_PATH = '/api';
-            const RENDER_API_ORIGIN = 'https://booking-ub69.onrender.com';
-            const fallbackOrigin = RENDER_API_ORIGIN;
-            const baseOrigin = (window.location.origin && window.location.origin !== 'null')
-                ? window.location.origin
-                : fallbackOrigin;
-
-            const ensureApiPath = (value) => {
-                if (!value) return null;
-                try {
-                    const url = new URL(value, baseOrigin);
-                    const normalizedPath = url.pathname.replace(/\/+$/, '') || '/';
-                    const hasApiSegment = /\/api(?:$|\/)/i.test(normalizedPath);
-                    const resolvedPath = hasApiSegment
-                        ? normalizedPath
-                        : `${normalizedPath === '/' ? '' : normalizedPath}${DEFAULT_API_PATH}`;
-                    return `${url.origin}${resolvedPath}`;
-                } catch (error) {
-                    console.warn('Ignoring invalid API base URL:', value, error);
-                    return null;
-                }
-            };
-
-            const normalizeBaseUrl = (value) => {
-                if (!value) return null;
-                try {
-                    const url = new URL(value, baseOrigin);
-                    const normalizedPath = url.pathname.replace(/\/+$/, '');
-                    return normalizedPath ? `${url.origin}${normalizedPath}` : url.origin;
-                } catch (error) {
-                    console.warn('Ignoring invalid API base URL:', value, error);
-                    return null;
-                }
-            };
-
-            const params = new URLSearchParams(window.location.search);
-            const queryOverride = params.get('apiBaseUrl') || params.get('api_base_url');
-            if (queryOverride) {
-                const resolved = ensureApiPath(normalizeBaseUrl(queryOverride));
-                if (resolved) {
-                    try {
-                        localStorage.setItem(storageKey, resolved);
-                    } catch (error) {
-                        console.warn('Unable to persist API base URL override:', error);
-                    }
-                    return resolved;
-                }
+        function resolveApiBaseUrl() {
+            const hostname = window.location.hostname;
+            if (hostname === 'localhost' || hostname === '127.0.0.1') {
+                return 'http://localhost:3000';
             }
-
-            try {
-                const stored = ensureApiPath(normalizeBaseUrl(localStorage.getItem(storageKey)));
-                if (stored) {
-                    return stored;
-                }
-            } catch (error) {
-                console.warn('Unable to read stored API base URL override:', error);
+            if (hostname.includes('onrender.com')) {
+                return window.location.origin;
             }
-
-            const inlineConfig = ensureApiPath(normalizeBaseUrl(window.__BOOKING_CONFIG__?.apiBaseUrl));
-            if (inlineConfig) return inlineConfig;
-
-            const metaTag = document.querySelector('meta[name="api-base-url"]');
-            const metaUrl = ensureApiPath(normalizeBaseUrl(metaTag?.content));
-            if (metaUrl) return metaUrl;
-
-            // Prioritize current origin if valid (e.g. served from the same backend)
-            const normalizedCurrentOrigin = normalizeBaseUrl(baseOrigin);
-            if (normalizedCurrentOrigin && !normalizedCurrentOrigin.startsWith('file:') && normalizedCurrentOrigin !== 'null') {
-                return ensureApiPath(normalizedCurrentOrigin);
-            }
-
-            return ensureApiPath(fallbackOrigin);
+            return 'https://booking-ub69.onrender.com';
         }
 
-        const API_BASE_URL = resolveApiBaseUrl('booking.apiBaseUrl');
+        const API_BASE_URL = resolveApiBaseUrl();
 
         const state = {
             settings: null,
