Fix HTML syntax error and missing JS function

--- a/admin/index.html
+++ b/admin/index.html
@@ -973,6 +973,9 @@
 
         document.addEventListener('DOMContentLoaded', async () => {
             await checkApiHealth();
+            if (typeof checkAuthentication === 'function') {
+                checkAuthentication();
+            }
 
             // Event Listeners for Tabs
             document.querySelectorAll('.tab-btn').forEach(btn => btn.addEventListener('click', handleTabClick));
