--- a/frontend/rental.html
+++ b/frontend/rental.html
@@ -511,9 +511,14 @@
     </main>
     <div class="payment-reminder-modal" id="payment-reminder-modal" aria-hidden="true">
         <div class="payment-reminder-content">
-            <button type="button" class="payment-reminder-close" id="payment-reminder-close" <a
-                id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開
+            <button type="button" class="payment-reminder-close" id="payment-reminder-close"
+                aria-label="Close">×</button>
+            <h3>預約已提交</h3>
+            <p>預約已提交，請在 30 分鐘內完成付款，並將付款截圖 send 到 WhatsApp。</p>
+            <a id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開
                 WhatsApp</a>
+            id="payment-reminder-whatsapp" class="whatsapp-button" href="#" target="_blank" rel="noopener">打開
+            WhatsApp</a>
         </div>
     </div>
     <script>
